# deep-hook-review-library

./: .gitignore  LICENSE  README.md  deep.example.yml  pyproject.toml  requirements.txt  test_ollama.py
deep_hook/: __init__.py
deep_hook/agent/: __init__.py  graph.py  parser.py  review_agent.py  state.py
deep_hook/config/: __init__.py  loader.py
deep_hook/core/: __init__.py  exceptions.py  markdown.py  models.py  prompts.py
deep_hook/llm/: __init__.py  provider.py
deep_hook_review/: __init__.py
deep_hook_review/agent/: __init__.py  graph.py  parser.py  review_agent.py  state.py
deep_hook_review/config/: __init__.py  loader.py
deep_hook_review/core/: __init__.py  exceptions.py  markdown.py  models.py  prompts.py
deep_hook_review/llm/: __init__.py  provider.py
deep_hook_review/mcp/: __init__.py  tools.py
